# CoralNet-Toolbox

./: .gitallowed  .gitignore  404.html  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  REFACTORING_GUIDE_THRESHOLDS.md  _new_qtcontextmatrix.txt  annotations.txt  coralnet_toolbox.yml  hot-keys.html  index.html  install.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  sitemap.xml  start-coralnet.sh  toolbox.py
.claude/: settings.local.json
Archive/: toolbox.py
CoralNet_3D/: README.md
CoralNet_API/: CoralNet_API.ipynb  CoralNet_API.py  CoralNet_API_GUI.py  CoralNet_Download.ipynb  CoralNet_Download.py  CoralNet_Download_GUI.py  CoralNet_Labelset.ipynb  CoralNet_Labelset.py  CoralNet_Upload.ipynb  CoralNet_Upload.py  Download_CoralNet.ipynb  Download_CoralNet.py  README.md  Upload_CoralNet.ipynb  requirements.txt
CoralNet_Data/: CoralNet_Labelset_Dataframe.csv  CoralNet_Labelset_List.csv  CoralNet_Source_ID_Dataframe.csv  CoralNet_Source_ID_List.csv  README.md
Data/: README.md
Demo/: README.md  convert_to_jpg.py
Docs/: README.md
Environments/: coralnet_toolbox_avd.yml
Image_Classifier/: Adding_Additional_Sparse_Labels.ipynb  Annotations_to_Patches.ipynb  Clean_Patches.ipynb  Cropping_Patches.ipynb  README.md  Train_Image_Classifier.ipynb  utils.py
Notebooks/: Bulk_Patches.ipynb  Point_Filtering.ipynb  QClasses.ipynb  ToYOLO.ipynb
Patch_Extractor/: README.md  converting_to_csv.ipynb
Segmentation/: README.md
Toolbox/: README.md  annotate.py  api.py  app.py  classification.py  classification_demo.py  classification_inference.py  classification_pretrain.py  common.py  download.py  download_app.py  gooey_config.json  labelset.py  patches.py  points.py  projector.py  sam.py  sam_demo.py  segmentation.py  segmentation_3d.py  segmentation_demo.py  segmentation_inference.py  sfm.py  toolbox.py  upload.py
VISCORE/: convert_data.py
archive/: README.md  install.py  requirements.txt
changelog/: index.html
classify/: index.html
toolshed/: README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  toolshed.py
toolshed/Notebooks/: Bulk_Patches.ipynb  Point_Filtering.ipynb  ReefFutures.ipynb  ReefFutures_MIR.ipynb  ReefFutures_Palmyra.ipynb  ToYOLO.ipynb
toolshed/coralnet_toolshed/: API.py  Annotate.py  Classification.py  ClassificationInference.py  ClassificationPreTrain.py  Common.py  Download.py  Labelset.py  Patches.py  Points.py  Projector.py  SAM.py  Segmentation.py  Segmentation3D.py  SegmentationInference.py  SfM.py  Spotlight.py  ToYOLO.py  Upload.py  ViscoreInference.py  Visualize.py
toolshed/src/: API.py  Annotate.py  Browser.py  Classification.py  ClassificationInference.py  ClassificationPreTrain.py  Download.py  Labelset.py  Patches.py  Points.py  Projector.py  SAM.py  Segmentation.py  Segmentation3D.py  SegmentationInference.py  SfM.py  Spotlight.py  ToYOLO.py  Upload.py  ViscoreInference.py  Visualize.py  __init__.py  main.py  toolshed.py
toolshed/src/Patch_Extractor/: README.md
toolshed/toolshed/: ClassificationPreTrain.py  Download.py  Segmentation.py  __init__.py  app.py
(+1895 files in other folders)
