[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coralnet-toolbox"
version = "0.0.1"
description = "Tools useful for interacting with CoralNet and other CPCe-related downstream tasks."
authors = [
    { name="Jordan Pierce", email="jordan.pierce@noaa.gov" }
]
license = { text = "AGPL-3.0" }

[project.dependencies]
wheel = "*"
setuptools = "*"
PyQt5 = "*"
ultralytics = "==8.2.80"
rasterio = "*"
dill = "*"

[project.scripts]
coralnet-toolbox = "toolbox:run"

[project.package-data]
toolbox = ["icons/*"]
