[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coralnet-toolshed"
version = "0.0.1"
description = "Old tools useful for interacting with CoralNet and other CPCe-related downstream tasks."
authors = [
    { name="Jordan Pierce", email="jordan.pierce@noaa.gov" }
]
license = { text = "AGPL-3.0" }

[project.dependencies]
wheel = "*"
setuptools = "*"
msvc-runtime = "*"
numpy = "*"
pandas = "*"
scikit-image = "*"
scikit-learn = "*"
scipy = "*"
matplotlib = "*"
Pillow = "*"
opencv-python = "*"
albumentations = "==1.3.1"
plyfile = "*"
Requests = "*"
beautifulsoup4 = "==4.12.2"
selenium = "==4.15.2"
webdriver_manager = "*"
simclr = "==1.0.2"
torcheval = "==0.0.7"
tensorboard = "*"
segment-anything = "==1.0"
segmentation-models-pytorch = "==0.3.3"
renumics-spotlight = "*"
gooey = "*"
